# Neuralink

./: .codiumai.toml  .gitignore  Makefile  README.md  bigram.puml  decode  encode  eval.sh  lookup_table.npy  next_value_prob.npy  playground.ipynb  readme.html  requirements.txt
cpp/: CMakeLists.txt  HuffmanCompressor.h  TestHuffman.cpp  decode.cpp  encode.cpp
cpp/include/: DiskHuffmanTree.h  WavReadWrite.h
cpp/src/: BuildDiskHuffmanTree.cpp  DiskHuffmanTree.cpp  WavReadWrite.cpp  decode.cpp  encode.cpp
cpp/tests/: TestHuffman.cpp
python_play/: BaseCompressor.py  BetterBaseCompressor.py  LookUpCompressor.py  ProbLookUp.py  Test.py
python_play/BiGramCompressor/: BigramModel.py  ReadAudioFiles.py  Tokenizer.py
python_play/tests/: TestBigramModel.py
